fixed overflow items when adding new

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,6 +27,7 @@ body {
 }
 #items-container {
     display: flex;
+    flex-direction: column;
     justify-content: space-around;
     align-items: center;
     background-color: rgb(255, 255, 255, .8);
@@ -34,11 +35,11 @@ body {
     border-radius: 2em;
 }
 img{
-    width: 300px;
-    height: 200px;
+    width: 450px;
+    height: 300px;
 }
 #item-container {
-    display: inline-flex;
+    display: flex;
     flex-direction: column;
     text-align: center;
     justify-content: center;
